Create Unknown resolution
Kodi import is crashing if ever there are movies without video details.
If resolution got empty string it crashes Kodi library import because this is not a know value in source_select list.
Creating explicit Unknown resolution/source, enable to manage properly this use case, allowing to flow seamlessly.

Propagate new Unknown in Quality settings

Add management of Unknown quality in quality settings to prevent page crash

--- a/templates/settings/quality.html
+++ b/templates/settings/quality.html
@@ -162,7 +162,7 @@
         </div>
 
         <template id="profile_template">
-            ${generate_profile("", {'Sources': {'BluRay-1080P': [True, 1], 'BluRay-4K': [False, 0], 'BluRay-720P': [True, 2], 'CAM-SD': [False, 13], 'DVD-SD': [False, 9], 'Screener-1080P': [False, 10], 'Screener-720P': [False, 11], 'Telesync-SD': [False, 12], 'WebDL-1080P': [True, 4], 'WebDL-4K': [False, 3], 'WebDL-720P': [True, 5], 'WebRip-1080P': [True, 7], 'WebRip-4K': [False, 6], 'WebRip-720P': [True, 8]}, 'ignoredwords': 'subs,german,dutch,french,truefrench,danish,swedish,spanish,italian,korean,dubbed,swesub,korsub,dksubs,vain,HC,blurred', 'preferredwords': '', 'prefersmaller': False, 'requiredwords': '', 'scoretitle': True})}
+            ${generate_profile("", {'Sources': {'BluRay-1080P': [True, 1], 'BluRay-4K': [False, 0], 'BluRay-720P': [True, 2], 'CAM-SD': [False, 13], 'DVD-SD': [False, 9], 'Screener-1080P': [False, 10], 'Screener-720P': [False, 11], 'Telesync-SD': [False, 12], 'WebDL-1080P': [True, 4], 'WebDL-4K': [False, 3], 'WebDL-720P': [True, 5], 'WebRip-1080P': [True, 7], 'WebRip-4K': [False, 6], 'WebRip-720P': [True, 8], 'Unknown': [False, 14]}, 'ignoredwords': 'subs,german,dutch,french,truefrench,danish,swedish,spanish,italian,korean,dubbed,swesub,korsub,dksubs,vain,HC,blurred', 'preferredwords': '', 'prefersmaller': False, 'requiredwords': '', 'scoretitle': True})}
         </template>
 
     </body>
