#258 Add task to scan for missing files
Adds scheduledtask that scans disk for movie files and applies an action if they are not found. Currently two options are possible: revert or remove.

Revert is similar to a reset done through the management page except that it does not reset predb flags.

Remove removes movies from the library if their file has been deleted.

--- a/static/css/system.css
+++ b/static/css/system.css
@@ -1,6 +1,19 @@
+h1 {
+    display: block;
+    width: 100%;
+}
+h3{
+    margin-left: 0.5em;
+}
+
 h5{
     display: inline-block;
     margin: 0;
+}
+
+table#tasks{
+    margin: 0 1em;
+    width: calc(100% - 2em);
 }
 
 #donate{
